* refactoring of the SQL usage in the class.backend.php
* refactoring of the SQL usage in the class.calendar.php
* refactoring of the SQL usage in the class.frontend.php
* refactoring of the SQL usage in the droplet.extension.php
* updated precheck.php
* removed no longer used class.event.php
* updated initialize.php
* fixed: uninstall does not remove the droplet kit_monthly_calendar

0.38 - 2012-12-29

* added: parameter ORDER and LIMIT for the droplet kit_monthly_calender, please
  check <http://yals.de/QZ8DpQ> for more informations.

0.37 - 2012-12-28

* fixed: permaLinks uses the wrong action parameter, so they don't work

0.36 - 2012-11-28

* fixed: update script reset the individual configuration settings
* fixed: invalid constant in droplet kit_monthly_calendar
* added: paging function for the tableSorter in tableSorter.jquery and the
  in /templates/frontend/preset/11/DE/frontend.view.active.dwoo - you must
  uncomment the paging function to activate it.
* fixed: added missing initializing for dropletsExtension in class.calendar.php

0.35 - 2012-10-25

* fixed changed placeholder names in the templates ($event.group.description,
  $event.description.short, $event.description.long, $event.link.detail a.o.)
* changed about dialog for usage of Markdown syntax
* added jQuery motTableSorter
* updated Droplets for usage of jQuery motTableSorter - use parameter
  tablesorter=true to activate the table sorter for your form
* added sample template /templates/frontend/presets/11/DE to show how to display
  events in a list, using motTableSorter for sorting

0.34 - 2012-10-21

* updated DE language file
* moved CSS file for the DatePicker to /presets/css
* added parameter fnSort for preselect sorting to /presets/dataTable.jquery
* fixed a wrong declaration in /templates/backend/DE/order.list.dwoo

0.33 - 2012-10-19

* added missing translate() commands in the templates
* fixed wrong path to jQuery dataTable
* updated DE language file

0.32 - 2012-10-18
